frontend/test/should_pass/redirect_002d.grg
rule r {
	x:Node -e:Edge-> ;
	y:Node;
	
	modify {
		y !-e-> ;
	}
}

