frontend/test/should_fail/edge_001.grg
rule r {
	x:Node -e:UEdge-> y:Node;

	modify {
	}
}
